--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                 </p>
                 <figure>
                     <!-- CORRECCIÓN DE NOMBRE DE IMAGEN -->
-                    <img src="ilustracion 14 puestos de carga electricos terpel (capitulo 1).jpg" alt="Puestos de carga eléctricos Terpel" style="width: 80%; margin: 0 auto; display: block;">
+                    <img src="ilustracion 14 puestos de carga electricos (capitulo 1)" alt="Puestos de carga eléctricos Terpel" style="width: 80%; margin: 0 auto; display: block;">
                     <figcaption><strong>Puestos de carga eléctricos Terpel</strong><br>
                         <em>Fuente: Tomado de dreamstime. (s. f.). https://mobilityportal.lat/terpel-24-puntos-carga-vias</em>
                     </figcaption>
@@ -1091,3 +1091,4 @@
 
 </body>
 </html>
+
